Fixed dark mode on mobile view for background.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -175,7 +175,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -2;
+    z-index: -1;
     overflow: hidden;
 }
 
